--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -64,8 +64,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="addUser.xaml.cs">
+      <DependentUpon>addUser.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Firma.cs" />
     <Compile Include="SQLiteDataAccess.cs" />
+    <Page Include="addUser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
