Naprawiona część błędów, Binding nadal nie działa prawidłowo

--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -67,7 +67,7 @@
     <Compile Include="addUser.xaml.cs">
       <DependentUpon>addUser.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Firma.cs" />
+    <Compile Include="Company.cs" />
     <Compile Include="SQLiteDataAccess.cs" />
     <Page Include="addUser.xaml">
       <SubType>Designer</SubType>
