--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -73,8 +73,8 @@
       <DependentUpon>Contractors.xaml</DependentUpon>
     </Compile>
     <Compile Include="Invoice.cs" />
-    <Compile Include="Invoice.xaml.cs">
-      <DependentUpon>Invoice.xaml</DependentUpon>
+    <Compile Include="NewInvoice.xaml.cs">
+      <DependentUpon>NewInvoice.xaml</DependentUpon>
     </Compile>
     <Compile Include="Print.xaml.cs">
       <DependentUpon>Print.xaml</DependentUpon>
@@ -108,10 +108,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Invoice.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -124,6 +120,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewInvoice.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Print.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
