Pojawiające się produkty , przyciski dodaj produkt + okno do tego , usuń produkt

--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -66,6 +66,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\InvoiceProduct.cs" />
+    <Compile Include="Winows\AddNewProductMagazine.xaml.cs">
+      <DependentUpon>AddNewProductMagazine.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Winows\addUser.xaml.cs">
       <DependentUpon>addUser.xaml</DependentUpon>
     </Compile>
@@ -90,6 +93,10 @@
     </Compile>
     <Compile Include="Classes\Seller.cs" />
     <Compile Include="Classes\SQLiteDataAccess.cs" />
+    <Page Include="Winows\AddNewProductMagazine.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Winows\addUser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
