Pierwsze prace przy zestawieniu.

--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -72,6 +72,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\InvoiceProduct.cs" />
+    <Compile Include="Classes\StorageOperations.cs" />
     <Compile Include="Winows\AddNewProductMagazine.xaml.cs">
       <DependentUpon>AddNewProductMagazine.xaml</DependentUpon>
     </Compile>
