--- a/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
+++ b/System_do_zarzadzania_obslugi_sprzedazy/System_do_zarzadzania_obslugi_sprzedazy.csproj
@@ -42,6 +42,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Debug\System_do_zarzadzania_obslugi_sprzedazy.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
